@@ -157,7 +157,10 @@ sub config_target {
             if ($name !~ /:/ && !$config->get(key => "target.$name.uri")) {
                 # No URI. Give it one.
                 my $engine = $p{engine} || $props->{engine}
-                          || $config->get(key => 'core.engine');
+                    || $config->get(key => 'core.engine')
+                    || hurl $self->command => __(
+                        'No engine specified; specify via target or core.engine'
+                    );
                 push @params => (uri => URI::db->new("db:$engine:"));
             }
         }
@@ -280,7 +283,8 @@ sub write_plan {
             $uri     ||= $conf_plan->uri;
         } else {
             hurl $self->command => __x(
-                'Cannot write a plan file without a project name'
+                'Missing %project pragma in {file}',
+                file => $file,
             ) unless $project;
         }
     }
